testsuite/tests/typecheck/should_fail/T5853.stderr

T5853.hs:15:52: error:
    Could not deduce: Subst t1 (Elem t2) ~ t2
    from the context: (F t0,
                       Subst t0 (Elem t2) ~ t2,
                       Subst t2 (Elem t0) ~ t0,
                       F t1,
                       Subst t1 (Elem t0) ~ t0,
                       Subst t0 (Elem t1) ~ t1)
      bound by the RULE "map/map" at T5853.hs:15:2-57
    ‘t2’ is a rigid type variable bound by
         the RULE "map/map" at T5853.hs:15:2
    Relevant bindings include
      f :: Elem t0 -> Elem t2 (bound at T5853.hs:15:19)
      g :: Elem t1 -> Elem t0 (bound at T5853.hs:15:21)
      xs :: t1 (bound at T5853.hs:15:23)
    In the expression: (f . g) <$> xs
    When checking the transformation rule "map/map"
